# TrendFollowing

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml
data/: kospi200_20260212.csv  kospi_mcap100_adj_5000_test.csv  sample_005930.csv  traders_sample.csv
data/smoke_test/: README.md  manifest.json
docs/: accounting_rules_backtest.md  capital_management_rules_v2.md  entry_rules.md  filters.md  min_position_strategy.md  research_paths.md  spec_updated_v2.md  strategy_C.md  strategy_b_variants.md  trader_trader_master.md  ts_prmd_variants.md
scripts/: AI_pivot_point.py  AI_pivot_point_stage2.py  AI_pivot_point_stage4.py  Draw_matlab_figure.py  create_pivot_point_label.py  download_krx_futures_idx.py  generate_three_part_report.py  launch_universe_longonly_13tickers.ps1  launch_universe_longonly_13tickers.sh  paper_runner.py  paper_trade_005930.py  run_parallel.py  run_smoke_tests.py  run_trader_master_from_config.py  run_universe_longonly_sweep.py  toy_005930_backtest.py  toy_005930_combo_compare.py  toy_005930_ensemble_4combo.py
scripts/AI_scripts/: AI_pivot_point.py  AI_pivot_point_stage3.py  AI_pivot_point_stage5.py  AI_pivot_point_voting.py  ML_pivot_point.py  run_parallel_stage5.py  stage6_1_bake_data.py  stage6_2_train_models.py  stage7_1_bake_data.py  stage7_2_train_models.py  stage8_train_variants.py  stage9_3_he_init_10runs.py  stage9_4_tune_lr_he_init.py  stage9_optimize_hyperparams.py  stage9_plot_kospi200.py  stage9_verify_10runs.py
scripts/data_scripts/: download_krx_ohlcv_panel.py
src/invest_v2/: prep.py  (+1 more)
tools/: plotly_viewer.py
(+173 files in other folders)
